--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ layout: default
             </div>
             <div class="post-cover-picture-container">
               {% if post.vimeo-id %}<a class="video-image" target="_blank" href="http://vimeo.com/{{post.vimeo-id}}">{%endif%}
-                <img class="post-cover-picture" src="{{ site.baseurl }}{{ post.preview }}" alt="Cover image for {{post.title}}" style="box-shadow: 5px 5px rgba({{post.color.r}},{{post.color.g}},{{post.color.b}});">
+                <img class="post-cover-picture" src="{{ site.baseurl }}{{ post.preview }}" alt="Cover image for {{post.title}}" style="box-shadow: 5px 5px rgb({{post.color.r}},{{post.color.g}},{{post.color.b}});">
               {% if post.vimeo-id %}</a>{%endif%}
               <div class="post-cover-icons-container">
                 {% if post.vimeo-id %} <span class="post-cover-icon"><a class="video-image" target="_blank" href="http://vimeo.com/{{post.vimeo-id}}" vimeo-id="{{post.vimeo-id}}" ><img src="assets/images/video-logo.png" alt=""></a></span>{%endif%}
