--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
         <img class="me-drawing" src="assets/images/me.svg" alt="a drawing of me">
         <img class="arrow" src="assets/images/arrow.svg" alt="an arrow pointing the drawing of me">
         <span class="picture-description normal-text">me*</span>
-        <span class="drawing-text">*I'm not actually a drawing</span>
+        <span class="drawing-text">*I actually a real person</span>
       </div>
       <div class="profile-description">
         I am a
