--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ layout: default
         <span class="contract">I am currently looking for a</span>
         <select class="select-contract contract">
           <optgroup>
-            <option value="CDI or CDD">CDI or CDD contract</option>
+            <option value="freelance">freelance mission</option>
             <option value="good team">good & ambitious team</option>
             <option value="productive studio">productive studio</option>
             <option value="Paris-based studio">Paris-based studio</option>
