--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@ layout: default
 <link rel="stylesheet" href="{{ site.baseurl }}/css/index.css">
   <section class="introduction">
       <div class="profile-picture">
-        <img class="me-drawing" src="assets/images/me.svg" alt="a drawing of me">
+        <img src="assets/images/me2.jpg" alt="photo of me">
+        <!-- <img class="me-drawing" src="assets/images/me.svg" alt="a drawing of me">
         <img class="arrow" src="assets/images/arrow.svg" alt="an arrow pointing the drawing of me">
         <span class="picture-description normal-text">me*</span>
-        <span class="drawing-text">*I actually a real person</span>
+        <span class="drawing-text">*I actually a real person</span> -->
       </div>
       <div class="profile-description">
         I am a
@@ -82,6 +83,7 @@ layout: default
             <option value="good team">good & ambitious team</option>
             <option value="productive studio">productive studio</option>
             <option value="Paris-based studio">Paris-based studio</option>
+            <option value="modern-thinking clients">modern-thinking clients</option>
           </optgroup>
         </select>.
         <select class="select-contract width contract">
