--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ layout: default
             <option value="creative technologist">creative technologist</option>
             <option value="designer">designer</option>
             <option value="swiss army knife">swiss army knife</option>
+            <option value="happy lonesome coder">happy lonesome coder</option>
           </optgroup>
         </select>
         <select class="select-iam width">
