--- a/prose-fm-conditions.html
+++ b/prose-fm-conditions.html
@@ -1,5 +1,5 @@
 <style>
-body {background-color: #ff1a00; color:white; font-family: Moderat}
+body {background-color: #ff1a00; color:white; font-family: Moderat;}
 @font-face {
   font-family: "Moderat";
   src: url("../fonts/Moderat-Regular.otf");
