--- a/prose-fm-conditions.html
+++ b/prose-fm-conditions.html
@@ -1,5 +1,5 @@
 <style>
-body {background-color: #ff1a00; color:white; font-family: Moderat;}
+body {background-color: #ff1a00; color:white; font-family: Moderat; font-size: 2em;}
 @font-face {
   font-family: "Moderat";
   src: url("../fonts/Moderat-Regular.otf");
@@ -8,15 +8,15 @@ body {background-color: #ff1a00; color:white; font-family: Moderat;}
 <body style="background-color: #ff1a00;">Cette charte est destinée à assurer une protection de la vie privée adaptée au visiteur ou à l’utilisateur individuel de « PROSE pour iOS» (ci-après l’ « Application »).
 L’Application est éditée par la société PARADE Studio, SARL  au capital social de 100 euros, immatriculée au RCS de Paris sous le n° 802 917 336, dont le siège social est situé au 20 rue Pierre Fontaine 75009 PARIS (France).
 Pour nous contacter, veuillez nous adresser un mail à l’adresse suivante : salut@prose.fm
-
+  </br>  </br>
 1. Engagement sur la sécurité de la vie privée 
-
+  </br>  </br>
 Le terme « données à caractère personnel » désigne les informations qui vous identifient telles que vos nom, date de naissance, adresse e-mail, adresse postale.
 Dans le cadre de l’utilisation de ces données, nous nous engageons à respecter la réglementation en vigueur concernant les conditions de protection de la vie privée.
 Les chapitres suivants exposent les modalités de recueil de vos données personnelles.
-
+  </br>  </br>
 2. Utilisation des données personnelles
-
+  </br>  </br>
 PARADE Studio n’utilise aucune donnée à caractère personnel. 
 PARADE Studio ne conserve  aucune donnée.
 Voilà, c’est plutôt simple.
