--- a/index.html
+++ b/index.html
@@ -103,11 +103,12 @@ layout: default
                {{ forloop.index }}/{{site.posts.size}}
             </div>
             <div class="post-cover-picture-container">
-              {% if post.vimeo-id %}<a class="video-image" target="_blank" href="http://vimeo.com/{{post.vimeo-id}}">{%endif%}
+              {% if post.video %}<a class="video-image" target="_blank" href="http://vimeo.com/{{post.vimeo-id}}">
+              {% elsif post.vimeo-id %}<a class="video-image" target="_blank" href="http://vimeo.com/{{post.vimeo-id}}">{%endif%}
                 <img class="post-cover-picture" src="{{ site.baseurl }}{{ post.preview }}" alt="Cover image for {{post.title}}" style="box-shadow: 5px 5px rgb({{post.color.r}},{{post.color.g}},{{post.color.b}});">
-              {% if post.vimeo-id %}</a>{%endif%}
+              {% if post.video or post.vimeo-id %}</a>{%endif%}
               <div class="post-cover-icons-container">
-                {% if post.vimeo-id %} <span class="post-cover-icon"><a class="video-image" target="_blank" href="http://vimeo.com/{{post.vimeo-id}}" vimeo-id="{{post.vimeo-id}}" ><img src="assets/images/video-logo.png" alt=""></a></span>{%endif%}
+                {% if post.video or post.vimeo-id %} <span class="post-cover-icon"><a class="video-image" target="_blank" href="http://vimeo.com/{{post.vimeo-id}}" vimeo-id="{{post.vimeo-id}}" ><img src="assets/images/video-logo.png" alt=""></a></span>{%endif%}
                 {% if post.link %} <span class="post-cover-icon"><a class="" target="_blank" href="{{post.link}}"><img src="assets/images/link-logo.png" alt=""></a></span>{%endif%}
               </div>
             </div>
