--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@ layout: default
         <select class="select-iam width">
                <option class="widthTempOption"></option>
         </select>
-         in Paris</br>
+         in <del>Paris</del> Montréal</br>
         I develop
         <select class="select-develop">
           <optgroup>
-            <option value="software">software</option>
-            <option value="video games">video games</option>
             <option value="mobile apps">mobile apps</option>
+            <option value="video games">video games</option>
+            <option value="software">installations</option>
+            <option value="software">software</option>
             <option value="websites">websites</option>
           </optgroup>
         </select>
