Added work experience ✌🏽

--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@ layout: default
                <option class="widthTempOption"></option>
         </select>
          years</br>
+        while working for the <a class="normal-link" href="publicissapientlabs.fr" target="_blank">
+          
+          <select class="select-projects">
+            <optgroup>
+              <option value="publicis">Publicis.Sapient</option>
+              <option value="digitas">(ex) Digitas LBi</option>
+          </optgroup>
+          </select>
+          <select class="select-projects width">
+                 <option class="widthTempOption"></option>
+          </select>
+           Labs</a>
+        </br>
         I like
         <select class="select-projects">
           <optgroup>
