--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
                <option class="widthTempOption"></option>
         </select>
          in <del>Paris</del> Montréal</br>
-        I develop
+        I develop & imagine 
         <select class="select-develop">
           <optgroup>
             <option value="mobile apps">mobile apps</option>
@@ -51,18 +51,18 @@ layout: default
                <option class="widthTempOption"></option>
         </select>
          years</br>
-        while working for the <a class="normal-link" href="publicissapientlabs.fr" target="_blank">
-          
-          <select class="select-projects">
+        while <select class="select-projects">
             <optgroup>
-              <option value="publicis">Publicis.Sapient</option>
-              <option value="digitas">(ex) Digitas LBi</option>
+              <option value="work">working</option>
+              <option value="experiment">experimenting</option>
+              <option value="design">designing</option>
+              <option value="craft">crafting</option>
           </optgroup>
           </select>
           <select class="select-projects width">
                  <option class="widthTempOption"></option>
           </select>
-           Labs</a>
+      at the <a class="normal-link" href="publicissapientlabs.fr" target="_blank">Publicis.Sapient Labs (ex. Digitas)</a>
         </br>
         I like
         <select class="select-projects">
