--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@ layout: default
           <select class="select-projects width">
                  <option class="widthTempOption"></option>
           </select>
-      at the <a class="normal-link" href="publicissapientlabs.fr" target="_blank">Publicis.Sapient Labs (ex. Digitas)</a>
+      at the <a class="normal-link" href="publicissapientlabs.fr" target="_blank">Publicis.Sapient Labs</a>
         </br>
         I like
         <select class="select-projects">
           <optgroup>
+            <option value="original">original</option>
+            <option value="challenging">challenging</option>
+            <option value="beautiful">beautiful</option>
             <option value="meaningful">meaningful</option>
             <option value="useful">useful</option>
             <option value="ergonomic">ergonomic</option>
-            <option value="challenging">challenging</option>
-            <option value="original">original</option>
-            <option value="beautiful">beautiful</option>
         </optgroup>
         </select>
         <select class="select-projects width">
