--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ layout: default
         This website is
         <select class="select-website">
           <optgroup>
-            <option value="a work in progress">a work in progress</option>
-            <option value="an example of my busyness">an example of my busyness</option>
+            <option value="lol">a quick showcase</option>
+            <option value="a work in progress">a (forever) work in progress</option>
             <option value="2-days-developed 1-page website">a 2-days-developed 1-page website</option>
             <option value="efficient and direct portfolio">an efficient and direct portfolio</option>
         </optgroup>
