--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
         <select class="select-iam width">
                <option class="widthTempOption"></option>
         </select>
-         in <del>Paris</del> Montréal</br>
+         in <del>Montréal</del> Paris</br>
         I develop & imagine 
         <select class="select-develop">
           <optgroup>
