--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <link rel="stylesheet" href="{{ site.baseurl }}/css/index.css">
   <section class="introduction">
       <div class="profile-picture">
-        <img src="assets/images/me2.jpg" alt="photo of me">
+        <img src="assets/images/me2.png" alt="photo of me">
         <!-- <img class="me-drawing" src="assets/images/me.svg" alt="a drawing of me">
         <img class="arrow" src="assets/images/arrow.svg" alt="an arrow pointing the drawing of me">
         <span class="picture-description normal-text">me*</span>
@@ -25,7 +25,7 @@ layout: default
                <option class="widthTempOption"></option>
         </select>
          in <del>Montréal</del> Paris</br>
-        I develop & imagine 
+        I develop & imagine
         <select class="select-develop">
           <optgroup>
             <option value="mobile apps">mobile apps</option>
@@ -38,7 +38,7 @@ layout: default
         <select class="select-develop width">
                <option class="widthTempOption"></option>
         </select>
-          using 
+          using
             <select class="select-tools">
           <optgroup>
             <option value="unity">Unity</option>
