--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
         <select class="select-iam width">
                <option class="widthTempOption"></option>
         </select>
-         in <del>Montréal</del> Paris</br>
+         from Paris</br>
         I develop & imagine
         <select class="select-develop">
           <optgroup>
@@ -109,11 +109,11 @@ layout: default
         <span class="contract">I am currently looking for a</span>
         <select class="select-contract contract">
           <optgroup>
-            <option value="freelance">freelance mission</option>
             <option value="good team">good & ambitious team</option>
             <option value="productive studio">productive studio</option>
             <option value="Paris-based studio">Paris-based studio</option>
             <option value="modern-thinking clients">modern-thinking clients</option>
+            <option value="freelance">freelance mission</option>
           </optgroup>
         </select>.
         <select class="select-contract width contract">
