--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ layout: default
           <select class="select-projects width">
                  <option class="widthTempOption"></option>
           </select>
-      at the <a class="normal-link" href="publicissapientlabs.fr" target="_blank">Publicis.Sapient Labs</a>
+      at the <a class="normal-link" href="https://publicissapient.fr" target="_blank">Publicis.Sapient Labs</a>
         </br>
         I like
         <select class="select-projects">
