--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ layout: default
                <option class="widthTempOption"></option>
         </select>
         </br>
-        I studied Interactive Design at <a class="normal-link" href="https://www.gobelins.fr/formation/mdi-design-et-management-de-l-innovation-interactive-cycle-2-lead-technique-ou-lead" target="_blank">Gobelins</a> for
+        I studied <a class="normal-link" href="https://www.gobelins.fr/formation/mdi-design-et-management-de-l-innovation-interactive-cycle-2-lead-technique-ou-lead" target="_blank">Interactive Innovation at Gobelins</a> for
         <select class="select-gobelins">
           <optgroup>
             <option value="3">3</option>
