--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@ layout: default
           using
             <select class="select-tools">
           <optgroup>
-            <option value="unity">Unity</option>
-            <option value="xcode">XCode</option>
-            <option value="android">Android</option>
-            <option value="openframeworks">openFrameworks</option>
-            <option value="unity">any language</option>
-            <option value="arduino">Arduino</option>
+            <option value="unity">Unity ✨</option>
+            <option value="xcode">XCode 🛠</option>
+            <option value="flutter">Flutter 🚻</option>
+            <option value="android">Android 👽</option>
+            <option value="openframeworks">openFrameworks 🎨</option>
+            <option value="unity">any language 👄</option>
+            <option value="arduino">Arduino 💡</option>
             <option value="powerpoint">Powerpoint 💁</option>
           </optgroup>
         </select>
