--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ layout: default
         I am a
         <select class="select-iam">
           <optgroup>
-            <option value="creative coder">creative coder</option>
             <option value="creative technologist">creative technologist</option>
+            <option value="creative coder">creative coder</option>
             <option value="designer">designer</option>
             <option value="swiss army knife">swiss army knife</option>
             <option value="happy lonesome coder">happy lonesome coder</option>
@@ -28,9 +28,9 @@ layout: default
         I develop & imagine
         <select class="select-develop">
           <optgroup>
+            <option value="installations">interactive installations</option>
             <option value="mobile apps">mobile apps</option>
             <option value="video games">video games</option>
-            <option value="software">installations</option>
             <option value="software">software</option>
             <option value="websites">websites</option>
           </optgroup>
@@ -43,7 +43,7 @@ layout: default
           <optgroup>
             <option value="unity">Unity ✨</option>
             <option value="xcode">XCode 🛠</option>
-            <option value="flutter">Flutter 🚻</option>
+            <option value="unreal">Unreal Engine ⚙️</option>
             <option value="android">Android 👽</option>
             <option value="openframeworks">openFrameworks 🎨</option>
             <option value="unity">any language 👄</option>
@@ -83,10 +83,11 @@ layout: default
         I like
         <select class="select-projects">
           <optgroup>
-            <option value="original">original</option>
+            <option value="innovative">innovative</option>
             <option value="challenging">challenging</option>
             <option value="beautiful">beautiful</option>
             <option value="meaningful">meaningful</option>
+            <option value="original">original</option>
             <option value="useful">useful</option>
             <option value="ergonomic">ergonomic</option>
         </optgroup>
@@ -98,7 +99,7 @@ layout: default
         This website is
         <select class="select-website">
           <optgroup>
-            <option value="lol">a quick showcase</option>
+            <option value="lol">a quick showcase that hasn't been updated since 2020</option>
             <option value="a work in progress">a (forever) work in progress</option>
             <option value="2-days-developed 1-page website">a 2-days-developed 1-page website</option>
             <option value="efficient and direct portfolio">an efficient and direct portfolio</option>
@@ -110,10 +111,10 @@ layout: default
         <span class="contract">I am currently looking for a</span>
         <select class="select-contract contract">
           <optgroup>
-            <option value="good team">good & ambitious team</option>
+            <option value="modern-thinking clients">modern-thinking clients</option>
             <option value="productive studio">productive studio</option>
             <option value="Paris-based studio">Paris-based studio</option>
-            <option value="modern-thinking clients">modern-thinking clients</option>
+            <option value="good team">good & ambitious team</option>
             <option value="freelance">freelance mission</option>
           </optgroup>
         </select>.
