--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
           <optgroup>
             <option value="creative technologist">creative technologist</option>
             <option value="creative coder">creative coder</option>
-            <option value="designer">designer</option>
+            <option value="interactive designer">designer</option>
             <option value="swiss army knife">swiss army knife</option>
             <option value="happy lonesome coder">happy lonesome coder</option>
           </optgroup>
