--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
           <optgroup>
             <option value="creative technologist">creative technologist</option>
             <option value="creative coder">creative coder</option>
-            <option value="interactive designer">designer</option>
+            <option value="designer">interactive designer</option>
             <option value="swiss army knife">swiss army knife</option>
             <option value="happy lonesome coder">happy lonesome coder</option>
           </optgroup>
@@ -101,7 +101,7 @@ layout: default
           <optgroup>
             <option value="lol">a quick showcase that hasn't been updated since 2020</option>
             <option value="a work in progress">a (forever) work in progress</option>
-            <option value="2-days-developed 1-page website">a 2-days-developed 1-page website</option>
+            <option value="2-days-developed 1-page website">a 2-days-developed 1-page website hosted on github</option>
             <option value="efficient and direct portfolio">an efficient and direct portfolio</option>
         </optgroup>
         </select></br></br>
